# AppifyDev-Project

./: .env.example  .gitignore  CLAUDE.md  DOCKER.md  README.md  build.sh  crontab  docker-compose.yml  fix-docker.sh  nginx.conf  redis.conf  run-container.sh  test-api.sh  test-docker.sh  vps_deploy_key.pub
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  .env.production  Dockerfile  main.py  pyproject.toml  requests.http  test_cors.py
backend/app/: database.py  schemas.py
backend/app/decorators/: __init__.py  cache_decorator.py
backend/app/routers/: articles.py  bookmarks.py  chat.py  search.py  trending.py
backend/app/services/: ai_chat.py  content_extractor.py  redis_cache.py  rss_aggregator.py  sentiment_analyzer.py
backend/scripts/: add_sample_data.py  fetch_news.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/bookmarks/: bookmark-button.tsx  bookmarks-list.tsx
frontend/src/components/chat/: chat-interface.tsx
frontend/src/components/filters/: category-filter.tsx
frontend/src/components/news/: article-card.tsx  news-feed.tsx
frontend/src/components/providers/: theme-provider.tsx
frontend/src/components/search/: search-bar.tsx
frontend/src/components/trending/: trending-topics.tsx
frontend/src/components/ui/: error-boundary.tsx  error-display.tsx  input.tsx  loading-spinner.tsx  (+2 more)
frontend/src/hooks/: use-session.ts
frontend/src/lib/: api.ts  session.ts  utils.ts  validations.ts
frontend/src/types/: index.ts
