[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "feedparser>=6.0.11",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "openai>=1.98.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
]
